# simpleDAS

./: README.md  __init__.py  hatch.toml  pyproject.toml  simpleDASreader.py
doc/: simpleDAS description.ipynb
examples/: das_data.csv  decimate_and_save.py  read_plot_channels.py
src/simpledas/: __init__.py  h5pydict.py  print_hdf5.py  simpleDASreader.py
